создал все репозитории, entity, реализовал процесcы: login, reg, logout